JumpScript/tests/baselines/reference/differentTypesWithSameName.errors.txt
tests/cases/compiler/differentTypesWithSameName.jump(16,15): error TS2345: Argument of type 'variable' is not assignable to parameter of type 'm.variable'.
  Property 's' is missing in type 'variable'.


==== tests/cases/compiler/differentTypesWithSameName.jump (1 errors) ====
    module m {
      export class variable{
        s: string;
      }
      export function doSomething(v: m.variable) {
        
      }
    }
    
    class variable {
     t: number;
    }
    
    
    var v: variable = new variable();
    m.doSomething(v);
                  ~
!!! error TS2345: Argument of type 'variable' is not assignable to parameter of type 'm.variable'.
!!! error TS2345:   Property 's' is missing in type 'variable'.